@@ -1,27 +1,20 @@
 package com.thekey.stylekeyserver.coordinatelook.service;
 
-import com.thekey.stylekeyserver.coordinatelook.dto.response.ApiCoordinateLookPageResponse;
 import com.thekey.stylekeyserver.coordinatelook.entity.CoordinateLook;
 import com.thekey.stylekeyserver.coordinatelook.dto.response.ApiCoordinateLookDetailsResponse;
 import com.thekey.stylekeyserver.coordinatelook.dto.response.ApiCoordinateLookResponse;
-import com.thekey.stylekeyserver.coordinatelook.repository.CoordinateLookRepository;
 import com.thekey.stylekeyserver.like.service.LikeCoordinateLookService;
 import java.util.List;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Slice;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 @Service
 @RequiredArgsConstructor
-@Transactional
 public class CoordinateLookService {
 
     private final CoordinateLookAdminService coordinateLookAdminService;
     private final LikeCoordinateLookService likeCoordinateLookService;
-    private final CoordinateLookRepository coordinateLookRepository;
 
     public ApiCoordinateLookDetailsResponse getCoordinateLookWithLikes(Long id) {
         CoordinateLook coordinateLook = coordinateLookAdminService.findById(id);
@@ -29,13 +22,10 @@ public class CoordinateLookService {
         return ApiCoordinateLookDetailsResponse.of(coordinateLook, likeCount, coordinateLook.getItems());
     }
 
-    public ApiCoordinateLookPageResponse getAllCoordinateLooksWithLikes(Pageable pageable) {
-        Slice<CoordinateLook> coordinateLooks = coordinateLookRepository.findAll(pageable);
-        List<ApiCoordinateLookResponse> responses = coordinateLooks.getContent().stream()
+    public List<ApiCoordinateLookResponse> getAllCoordinateLooksWithLikes() {
+        return coordinateLookAdminService.findAll().stream()
                 .map(this::buildApiCoordinateLookResponse)
-                .toList();
-
-        return ApiCoordinateLookPageResponse.fromSlice(responses, coordinateLooks.hasNext());
+                .collect(Collectors.toList());
     }
 
     public List<ApiCoordinateLookResponse> getCoordinateLookWithLikesByStylePointId(Long stylePointId) {
